First fixes on consolidations

--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -271,9 +271,9 @@
                                             />
                                         </div>
                                     </div>
-                                    <div class="col-12">
+                                    <div class="col-12" id="total-savings-div">
                                         <div class="form-group">
-                                            <label> Total Savings Due to Grouping</label>
+                                            <label> Total Savings Due to Grouping (€)</label>
                                             <input
                                                 class="form-control"
                                                 id="group-savings"
@@ -311,12 +311,7 @@
                                     <div class="col-12">
                                         <div class="form-group">
                                             <label> Local Jobs Costs</label>
-                                            <input
-                                                class="form-control currency-input"
-                                                id="locals-cost"
-                                                placeholder="Type Cost in EUR..."
-                                                type="number"
-                                            />
+                                            <input class="form-control currency-input" id="locals-cost" type="text" />
                                         </div>
                                     </div>
                                 </div>
