--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -258,6 +258,49 @@
                 </div>
             </div>
         </div>
+        <!-- Start Delivery on Board modal -->
+        <div
+            aria-hidden="true"
+            class="modal fade bd-example-modal-sm"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="delivery-on-board-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
+            <div id="delivery-on-board-modal-header" class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                        <h5 class="modal-title">Delivered on board</h5>
+                        <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group col-sm-12" style="display: none">
+                            <input class="form-control" id="done-con-group-id" />
+                        </div>
+                        <div class="form-group col-sm-12">
+                            <label>Delived on board*</label>
+                            <div class="input-group">
+                                <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
+                                <input
+                                    class="down-date-picker form-control"
+                                    type="text"
+                                    placeholder="Delivered on board date"
+                                    id="group-delivered-on-boat"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-primary" type="button" id="save-delivery-on-board">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Start Notes modal -->
 
         <nav class="fixed-header">
             <div class="navigation-header">
