--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -110,6 +110,176 @@
             </div>
         </div>
         <!-- End Help modal -->
+        <!-- Start Group Data Modal-->
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="group-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
+            <div id="cost-modal-header" class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                        <h5 class="modal-title">Consolidation Data</h5>
+                        <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> Mode</label>
+                                    <select
+                                        class="form-control select"
+                                        id="group-mode-select"
+                                        data-placeholder="Choose mode..."
+                                        tabindex="1"
+                                        disabled
+                                    >
+                                        <option></option>
+                                        <option value="Air">Air</option>
+                                        <option value="Courier">Courier</option>
+                                        <option value="Road">Road</option>
+                                        <option value="Sea">Sea</option>
+                                        <option value="Personnel">Personnel</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> Service</label>
+                                    <select
+                                        class="form-control select"
+                                        id="service-type-select"
+                                        data-placeholder="Choose service..."
+                                        tabindex="1"
+                                        disabled
+                                    ></select>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> Forwarder</label>
+                                    <input class="form-control" placeholder="Enter consol. forwarder" id="group-forwarder" disabled />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> Ex</label>
+                                    <select
+                                        class="form-control select"
+                                        id="group-ex-select"
+                                        data-placeholder="Choose city..."
+                                        tabindex="1"
+                                        disabled
+                                    ></select>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> To</label>
+                                    <select
+                                        class="form-control select"
+                                        id="group-to-select"
+                                        data-placeholder="Choose city..."
+                                        tabindex="1"
+                                        disabled
+                                    ></select>
+                                </div>
+                            </div>
+                            <div class="form-group col-4">
+                                <label>Deadline</label>
+                                <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
+                                <div class="input-group">
+                                    <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
+                                    <input
+                                        class="down-date-picker form-control"
+                                        type="text"
+                                        placeholder="Select consol. deadline"
+                                        id="group-deadline"
+                                        disabled
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row" id="grouped-jobs-cost">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>GROUP ACTUAL COSTS</h8>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label class="currency-label"> Group Cons. Cost (EUR)</label>
+                                            <input
+                                                class="form-control currency-input"
+                                                id="group-cost"
+                                                placeholder="Type Cost in EUR..."
+                                                type="number"
+                                            />
+                                        </div>
+                                    </div>
+                                    <div class="col-12" id="total-savings-div">
+                                        <div class="form-group">
+                                            <label> Total Savings Due to Grouping (€)</label>
+                                            <input
+                                                class="form-control"
+                                                id="group-savings"
+                                                placeholder="Group savings in EUR..."
+                                                type="number"
+                                                disabled
+                                            />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>GROUP ESTIMATE COSTS</h8>
+                                    </div>
+                                    <div class="col-12 row" id="append-grouped-estimate-cost" style="padding-left: 0px; padding-right: 0px"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6" id="individual-jobs-cost">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>INDIVIDUAL (IMPORT) COST</h8>
+                                    </div>
+                                    <div class="col-12" id="append-individual-cost" style="padding-left: 15px; padding-right: 15px"></div>
+                                </div>
+                            </div>
+                            <div class="col-6" id="local-jobs-costs">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>LOCAL COST </h8>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="form-group">
+                                            <label> Local Jobs Costs (EUR)</label>
+                                            <input class="form-control" data-trigger-flag="local-group" id="locals-cost" type="text" disabled />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Group Data Modal-->
         <!-- Start Help modal -->
         <div
             aria-hidden="true"
