Fixed many bugs from first release

--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -223,6 +223,7 @@
                                                 id="group-cost"
                                                 placeholder="Type Cost in EUR..."
                                                 type="number"
+                                                disabled
                                             />
                                         </div>
                                     </div>
