--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -220,6 +220,7 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Est. cost (EUR)</label>
+                                        <a class="currency-info" href="#"><i class="fa fa-info"></i></a>
                                         <input type="text" class="form-control" placeholder="Est Cost (EUR)" id="estimate_cost_eur" disabled />
                                     </div>
                                 </div>
@@ -269,7 +270,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-secondary close-btn" data-modal-referer="add-job-modal" type="button">Close</button>
                         <button class="btn btn-primary" type="button" id="save-job-btn">Save Job</button>
                     </div>
                 </div>
@@ -335,6 +336,7 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Group Cost (EUR)</label>
+                                        <a class="currency-info" href="#"><i class="fa fa-info"></i></a>
                                         <input class="form-control" placeholder="Group Cost (EUR)" id="group_cost_eur" disabled />
                                     </div>
                                 </div>
@@ -408,7 +410,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-secondary close-btn" data-modal-referer="costs-modal" type="button">Close</button>
                         <button class="btn btn-primary" type="button" id="save-costs">Save changes</button>
                     </div>
                 </div>
@@ -484,7 +486,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-secondary close-btn" data-modal-referer="personnel-costs-modal" type="button">Close</button>
                         <button class="btn btn-primary" type="button" id="save-personnel-costs">Save changes</button>
                     </div>
                 </div>
