--- a/pages/login.html
+++ b/pages/login.html
@@ -48,6 +48,14 @@
             margin-top: 5%;
             background-color: white;
         }
+        .login-text{
+            font-size: 12px
+        }
+        #iso-read-more {
+            color: #0069d9;
+            font-weight: bold;
+            cursor: pointer;
+        }
         #more {display: none;}
     </style>
 
@@ -77,15 +85,18 @@
                         </form>
                         <button style="width: 100%" class="btn btn-primary mt-2" id="sign-in-btn">Sign In</button>
                         <div class="iso-holder">
-                            <p>
+                            <p class="login-text">
                                 This Program also contributes to the company's management systems implementing the ISO 14001 & ISO 9001 <span id="dots">...</span><span id="more">
                                 standards as with regards to the protection of the environment and the quality of service rendered respectively.
                                 </br>
+                                </br>
                                 Grouping of items means less packing material, transport, energy, etc. Thus positively contributing to the environment (ISO 14001).
                                 </br>
-                                Effective control and efficient transportation includeing cost saving etc. directly improves the quality of the service customers satisfaction (ISO 9001)</span>
+                                </br>
+                                Effective control and efficient transportation includeing cost saving etc. directly improves the quality of the service and customers satisfaction (ISO 9001)</span>
                             </p>
-                            <button  class="btn btn-info mt-2" id="iso-read-more">Read more</button>
+                            <br>
+                            <p  id="iso-read-more">Read more</button>
                         </div>
 
 
