Fixed all changed on user pages

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -144,7 +144,7 @@
                                             class="form-control select"
                                             id="product-select"
                                             multiple
-                                            data-placeholder="Choose a product..."
+                                            data-placeholder="Choose products..."
                                             tabindex="1"
                                         ></select>
                                     </div>
