--- a/pages/done_individuals.html
+++ b/pages/done_individuals.html
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="../assets/icons/metrize/metrize.css" />
         <link rel="stylesheet" href="../assets/icons/typicons/typicons.min.css" />
         <link rel="stylesheet" href="../assets/icons/weathericons/css/weather-icons.min.css" />
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.dataTables.min.css" />
+        <link rel="stylesheet" type="text/css" href="../assets/css/fixedheadersDatatables.css" />
         <!--Date-range-->
         <link rel="stylesheet" href="../assets/plugins/date-range/daterangepicker.css" />
         <!--Drop-Zone-->
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <!-- End Help modal -->
+        <!-- End Ref Tracker modal -->
         <!-- Start Notes modal -->
         <div
             aria-hidden="true"
@@ -340,6 +340,79 @@
         </div>
         <!-- End Personnel Costs modal -->
 
+        <!-- Start Edit Job modal -->
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            id="edit-done-job-modal"
+            style="top: 15%"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
+            <div id="edit-done-job-modal-header" class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                        <h5 class="modal-title">Edit Job</h5>
+
+                        <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="row">
+                                <input class="form-control" id="done-ind-id" style="display: none" />
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label> Product*</label>
+                                        <select
+                                            class="form-control select"
+                                            id="product-select"
+                                            multiple
+                                            data-placeholder="Choose products..."
+                                            tabindex="1"
+                                        ></select>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label> Reference*</label>
+                                        <input class="form-control" placeholder="Type reference number..." id="reference" type="text" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label> WEIGHT (KG)*</label>
+                                        <input type="number" class="form-control" placeholder="Weight (kg)..." id="kg" />
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label> PIECES*</label>
+                                        <input type="number" class="form-control" placeholder="Pieces..." id="pieces" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group col-sm-12">
+                                    <label>Notes</label>
+                                    <textarea class="form-control" rows="3" id="notes"></textarea>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary close-btn" data-modal-referer="edit-done-job-modal" type="button">Close</button>
+                        <button class="btn btn-primary" type="button" id="save-done-job-btn">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Edit Job modal -->
+
         <nav class="fixed-header">
             <div class="navigation-header">
                 <div class="container-fluid">
@@ -525,7 +598,7 @@
         <script src="../assets/js/main.js"></script>
         <script src="../library/helpers.js"></script>
         <script type="text/javascript" src="../assets/js/toastr.js"></script>
-        <script src="../utilities/individuals.js"></script>
+        <script src="../utilities/doneIndividuals.js"></script>
         <script src="../library/db.js"></script>
         <script>
             const { remote } = require('electron')
@@ -534,7 +607,7 @@
             const { app, BrowserWindow } = require('electron').remote
             const { ipcRenderer } = electron
 
-            let myIndividuals = new IndividualsClass()
+            let myIndividuals = new DoneIndividualsClass()
         </script>
     </body>
 </html>
