--- a/pages/login.html
+++ b/pages/login.html
@@ -93,7 +93,7 @@
                                 Grouping of items means less packing material, transport, energy, etc. Thus positively contributing to the environment (ISO 14001).
                                 </br>
                                 </br>
-                                Effective control and efficient transportation includeing cost saving etc. directly improves the quality of the service and customers satisfaction (ISO 9001)</span>
+                                Effective control and efficient transportation including cost saving etc. directly improves the quality of the service and customers satisfaction (ISO 9001)</span>
                             </p>
                             <br>
                             <p  id="iso-read-more">Read more</button>
