--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -179,7 +179,7 @@
                         <li>
                             <a href="javascript:void(0);" class="have-submenu active">
                                 <span class="icon-thumbnail"><i class="dripicons-align-center"></i></span>
-                                <span class="title">Individuals</span>
+                                <span class="title">Individuals (Deleted)</span>
                             </a>
                             <ul class="sub-menu">
                                 <li>
@@ -252,9 +252,9 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
-                                <div class="section-title">
+                                <!-- <div class="section-title">
                                     <h4>Deleted Individuals</h4>
-                                </div>
+                                </div> -->
                                 <div class="block bg-trans table-block mb-4">
                                     <div class="row">
                                         <div class="table-responsive">
