--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -195,7 +195,7 @@
                             </div>
                             <div class="form-group col-4">
                                 <label>Deadline</label>
-                                <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
+                                <!-- <a class="deadline-info" href="#"><i class="fa fa-info"></i></a> -->
                                 <div class="input-group">
                                     <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
                                     <input
@@ -536,7 +536,7 @@
                         <li>
                             <a href="javascript:void(0);" class="have-submenu active">
                                 <span class="icon-thumbnail"><i class="dripicons-align-justify"></i></span>
-                                <span class="title">Consolidations</span>
+                                <span class="title">Consolidations (Done)</span>
                             </a>
                             <ul class="sub-menu">
                                 <li>
@@ -585,9 +585,9 @@
 
                         <div class="row">
                             <div class="col-12">
-                                <div class="section-title">
+                                <!-- <div class="section-title">
                                     <h4>Done Consolidations</h4>
-                                </div>
+                                </div> -->
                                 <div class="block bg-trans table-block mb-4">
                                     <div class="row">
                                         <div class="table-responsive">
