--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -217,7 +217,7 @@
                                         <select class="form-control select" id="currency" data-placeholder="Currency" tabindex="1"></select>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-2">
                                     <div class="form-group">
                                         <label> Est. cost (EUR)</label>
                                         <a class="currency-info" href="#"><i class="fa fa-info"></i></a>
@@ -228,6 +228,12 @@
                                     <div class="form-group">
                                         <label> WEIGHT (KG)</label>
                                         <input type="number" class="form-control" placeholder="Weight (kg)..." id="kg" />
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-group">
+                                        <label> DIMS</label>
+                                        <input type="text" class="form-control" placeholder="Dims..." id="dims" />
                                     </div>
                                 </div>
                                 <div class="col-sm-2">
@@ -253,7 +259,7 @@
                                 <div class="form-group col-sm-4">
                                     <label>Deadline*</label>
                                     <a id="remove-date" href="#"><i class="fa fa-calendar-minus-o"></i></a>
-                                    <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
+                                    <!-- <a class="deadline-info" href="#"><i class="fa fa-info"></i></a> -->
 
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
@@ -368,7 +374,7 @@
                             <div class="row">
                                 <div class="form-group col-sm-6">
                                     <label>Group deadline*</label>
-                                    <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
+                                    <!-- <a class="deadline-info" href="#"><i class="fa fa-info"></i></a> -->
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
                                         <input
@@ -529,7 +535,7 @@
                         <li>
                             <a href="javascript:void(0);" class="have-submenu active">
                                 <span class="icon-thumbnail"><i class="dripicons-align-center"></i></span>
-                                <span class="title">Individuals</span>
+                                <span class="title">Individuals (Pending)</span>
                             </a>
                             <ul class="sub-menu">
                                 <li>
@@ -605,9 +611,9 @@
                         <div class="row">
                             <div class="col-12"></div>
                             <div class="col-12">
-                                <div class="section-title">
+                                <!-- <div class="section-title">
                                     <h4>Pending Individuals</h4>
-                                </div>
+                                </div> -->
                                 <div class="block bg-trans table-block mb-4">
                                     <div class="row">
                                         <div class="table-responsive">
